SobiPro 1.2.1 final template mode inline form removed

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -248,6 +248,27 @@
 		color: @font-color;
 	}
 }
+/* form-inline mode needs to be checked
+.SobiPro .form-inline [class*="col-sm-"] {
+	float: none!important;
+}
+.SobiPro .form-inline .form-control {
+	display: block;
+}
+.SobiPro .form-inline label {
+	display: inline-block;
+	max-width: 100%;
+	width: 100%;
+	margin-bottom: 5px;
+}
+.SobiPro .form-inline .form-group {
+	display: inherit;
+	margin-bottom: 15px;
+}
+.SobiPro .form-inline .col-sm-offset-2 {
+	margin-left: 0;
+}
+*/
 
 //will be overwritten otherwise
 .SobiPro a.btn-default {
