--- a/Site/media/css/bootstrap/datepicker.css
+++ b/Site/media/css/bootstrap/datepicker.css
@@ -31,7 +31,7 @@
 	width: 250px;
 	padding: 4px;
 	margin-top: 1px;
-	z-index: 3000;
+	z-index: 3000!important;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
