--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -21,6 +21,8 @@
 @image-ratio: 0.75;
 @carousel-image: 500px;
 @print-gallery: 150px;
+@fontsize: 14px;
+
 
 //-------------------------------------------------------------------------------------*/
 
@@ -48,7 +50,6 @@
 
 @inverse: standard;
 @back-color: #FFFFFF;
-@fontsize: 14px;
 
 // same for all themes if not set
 @error-color: #A30000;
@@ -96,6 +97,9 @@
 	& when (@colour-set = terra) {
 		background-color: lighten(saturate(@base-color, 3%), 42%);
 	}
+	& when (@colour-set = waterfall) {
+		background-color: lighten(desaturate(@base-color,25%), 43%);
+	}
 }
 .borders(medium) {
 	border-color: lighten(@base-color, 33%);
@@ -122,6 +126,9 @@
 	}
 	& when (@colour-set = terra) {
 		border-color: lighten(@base-color, 27%);
+	}
+	& when (@colour-set = waterfall) {
+		border-color: lighten(desaturate(@base-color,25%), 30%);
 	}
 }
 .borders(light) {
@@ -150,6 +157,9 @@
 	& when (@colour-set = terra) {
 		border-color: lighten(@base-color, 50%);
 	}
+	& when (@colour-set = waterfall) {
+		border-color: lighten(desaturate(@base-color, 20%), 45%);
+	}
 }
 .background(light) {
 	background-color: lighten(saturate(@base-color, 15%), 56%);
@@ -176,6 +186,9 @@
 	}
 	& when (@colour-set = terra) {
 		background-color: lighten(saturate(@base-color, 25%), 62%);
+	}
+	& when (@colour-set = waterfall) {
+		background-color: lighten(desaturate(@base-color,10%), 56%);
 	}
 }
 .bottomborder(lightbackground) {
@@ -205,10 +218,13 @@
 	& when (@colour-set = terra) {
 		border-bottom-color: lighten(saturate(@base-color, 25%), 62%);
 	}
+	& when (@colour-set = waterfall) {
+		border-bottom-color: lighten(desaturate(@base-color,10%), 56%);
+	}
 }
 
 .headertext {
-	font-size: 22px;
+	font-size: calc(@fontsize + 8px);
 	color: @base-color;
 }
 
@@ -252,6 +268,14 @@
 	.navbar-collapse.collapse {
 		overflow: hidden!important;
 	}
+	.btn {
+		font-weight: 500;
+		font-size: @fontsize;
+	}
+	.dropdown-menu,
+	.form-control {
+		font-size: @fontsize;
+	}
 }
 /* form-inline mode needs to be checked
 .SobiPro .form-inline [class*="col-sm-"] {
@@ -292,7 +316,7 @@
 .SobiPro .page-header {
 	margin-bottom: 10px;
 	margin-top: 10px;
-	font-size: 22px;
+	font-size: calc(@fontsize + 8px);
 	font-weight: 300;
 	border-bottom: 1px solid lighten(@base-color, 50%);
 }
@@ -359,6 +383,10 @@
 .SobiPro [class^="icon-"],
 .SobiPro [class*=" icon-"] {
 	margin-right: 0;
+}
+.SobiPro p [class^="icon-"],
+.SobiPro p [class*=" icon-"] {
+	vertical-align: top;
 }
 
 // Implement B2 styles, these are handy to use
@@ -453,7 +481,7 @@
 // -----------------------------------------------
 .SobiPro h1 {
 	color: @active-color;
-	font-size: 26px;
+	font-size: calc(@fontsize + 12px);
 	line-height: 1.1;
 	margin-top: 0.67em;
 }
@@ -476,6 +504,7 @@
 	.SobiPro .nav-pills > li > a,
 	.SobiPro select,
 	.SobiPro textarea,
+	.SobiPro .form-control,
 	.bootstrap-datetimepicker-widget td,
 	.bootstrap-datetimepicker-widget th,
 	.bootstrap-datetimepicker-widget td span,
@@ -545,6 +574,10 @@
 		-webkit-border-radius: 4px;
 		-moz-border-radius: 4px;
 	}
+	.SobiPro .input-group .spClassUrlProtocol.form-control {
+		border-top-left-radius: 4px;
+		border-bottom-left-radius: 4px;
+	}
 }
 
 // Pagination
@@ -587,11 +620,11 @@
 .SobiPro .pagination-midi > li > a,
 .SobiPro .pagination-midi > li > span {
 	padding: 2px 9px;
-	font-size: 12px;
+	font-size: calc(@fontsize - 2px);
 }
 .SobiPro .pagination-xs > li > a,
 .SobiPro .pagination-xs > li > span {
-	font-size: 10.5px;
+	font-size: calc(@fontsize - 3.5px);
 	padding: 2.4px 5px;
 }
 
@@ -642,6 +675,26 @@
 	.SobiPro ol {
 		color: #fff;
 	}
+}
+
+.SobiPro textarea,
+.SobiPro select,
+.SobiPro input[type="text"],
+.SobiPro input[type="password"],
+.SobiPro input[type="datetime"],
+.SobiPro input[type="datetime-local"],
+.SobiPro input[type="date"],
+.SobiPro input[type="month"],
+.SobiPro input[type="time"],
+.SobiPro input[type="week"],
+.SobiPro input[type="number"],
+.SobiPro input[type="email"],
+.SobiPro input[type="url"],
+.SobiPro input[type="search"],
+.SobiPro input[type="tel"],
+.SobiPro input[type="color"],
+.SobiPro .uneditable-input {
+	font-size: @fontsize;
 }
 
 .SobiPro textarea:focus,
@@ -797,7 +850,7 @@
 		color: @text-color;
 		border-color: lighten(@base-color, 10%);
 	}
-	font-weight: bold;
+	font-weight: 500;
 	font-size: 95%;
 }
 
@@ -821,11 +874,11 @@
 // Bootbox
 .SobiPro .bootbox-alert i.error {
 	color: #A94442;
-	font-size: 30px;
+	font-size: calc(@fontsize + 16px);
 }
 .SobiPro .bootbox-alert i.success {
 	color: #449D44;
-	font-size: 30px;
+	font-size: calc(@fontsize + 16px);
 }
 .SobiPro .bootbox-alert div.signal {
 	float: left;
@@ -908,6 +961,9 @@
 .SobiPro .nav-pills {
 	font-size: calc(@fontsize + 1px);
 }
+.SobiPro .nav-pills > li.active > a,
+.SobiPro .nav-pills > li.active > a:focus,
+.SobiPro .nav-pills > li.active > a:hover,
 .SobiPro .nav-pills > .active > a,
 .SobiPro .nav-pills > .active > a:hover,
 .SobiPro .nav-pills > .active > a:focus {
@@ -992,7 +1048,7 @@
 }
 .SobiPro .alphalist .btn.btn-xs {
 	padding: 1px 5px;
-	font-weight: inherit;
+	font-weight: unset;
 	font-size: inherit;
 	margin-bottom: inherit;
 	border: inherit;
@@ -1093,7 +1149,7 @@
 	font-size: 80%;
 }
 .SobiPro .spEntryCount {
-	font-size: 12px;
+	font-size: calc(@fontsize - 2px);
 	color: @font-color;
 }
 .SobiPro .spSubcats {
@@ -1396,7 +1452,7 @@
 }
 .SobiPro .spEntryEdit .popover-title {
 	color: @error-color;
-	font-size: 17px;
+	font-size: calc(@fontsize + 3px);
 	font-weight: 400;
 }
 .SobiPro .spEntryEdit .popover-title::before {
@@ -1407,11 +1463,16 @@
 .SobiPro .editor {
 	overflow: visible;
 }
-.SobiPro .spUpload .span1 {
-	margin-left: 10px;
-}
-.SobiPro .spUpload .alert {
-	margin-top: 5px;
+.SobiPro .spUpload {
+	.span1 {
+		margin-left: 10px;
+	}
+	.alert {
+		margin-top: 5px;
+	}
+	.btn {
+		height: 34px;
+	}
 }
 .SobiPro .spClassEditInfo {
 	margin-top: 10px;
@@ -1428,6 +1489,7 @@
 		border-radius: 4px 0 0 4px;
 	}
 }
+.SobiPro .spFieldUrl .input-group .form-control,
 .SobiPro .spFieldUrl select {
 	width: 100px;
 }
@@ -1463,13 +1525,17 @@
 .SobiPro .spImageField label {
 	display: inline-block;
 }
-.SobiPro .spImageUpload .span1 {
-	margin-left: 10px;
+.SobiPro .spImageUpload {
+	.span1 {
+		margin-left: 10px;
+	}
+	.alert {
+		margin-top: 5px;
+	}
+	.btn {
+		height: 34px;
+	}
 }
-.SobiPro .spImageUpload .alert {
-	margin-top: 5px;
-}
-
 // Sigsiu Tree
 // ----------------------------------------
 .SigsiuTree .selected {
@@ -1577,6 +1643,11 @@
 & when (@inverse = inverse) {
 	.SobiPro .sp-search-phrases label {
 		color: #333;
+	}
+}
+.SobiPro .sp-search-controls {
+	.btn {
+		height: 34px;
 	}
 }
 
@@ -1704,7 +1775,7 @@
 		width: 30px;
 		height: 30px;
 		margin-top: -15px;
-		font-size: 30px;
+		font-size: calc(@fontsize + 16px);
 	}
 	.fa-chevron-right,
 	.icon-chevron-right,
@@ -1819,6 +1890,7 @@
 		color: @text-color;
 		border-color: lighten(@base-color, 10%);
 	}
+	font-weight: 400;
 }
 .SobiPro .spClassCalendarRepeat {
 	margin-top: 5px;
@@ -1957,13 +2029,13 @@
 		.borders(light);
 	}
 	// Standard Tabs: reset Styles
-	.nav-tabs > li.active > a,
-	.nav-tabs > li.active > a:hover,
-	.nav-tabs > li.active > a:focus {
+	.SobiPro .nav-tabs > li.active > a,
+	.SobiPro .nav-tabs > li.active > a:hover,
+	.SobiPro .nav-tabs > li.active > a:focus {
 		border: 1px solid #ddd;
 	}
 	// Pills: reset Styles
-	.nav-pills > li + li {
+	.SobiPro .nav-pills > li + li {
 		margin-left: 0;
 	}
 }
