(+) base font size adjustable via template settings

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -488,6 +488,12 @@
 .SobiPro h2 input[type="checkbox"] {
 	margin: 0 0 5px 0;
 }
+.SobiPro h2 {
+	font-size:  calc(@fontsize + 11px);
+}
+.SobiPro h3 {
+	font-size:  calc(@fontsize + 10px);
+}
 
 & when (@corners = angular) {
 	.SobiPro .well,
@@ -1049,7 +1055,7 @@
 .SobiPro .alphalist .btn.btn-xs {
 	padding: 1px 5px;
 	font-weight: unset;
-	font-size: inherit;
+	font-size: calc(@fontsize - 1px);
 	margin-bottom: inherit;
 	border: inherit;
 	margin-right: inherit;
@@ -1846,14 +1852,38 @@
 		color: @text-color;
 	}
 }
-.SobiPro .review-first i {
-	color: @base-color;
+.SobiPro .review-first {
+	font-size: calc(@fontsize + 2px);
+	i {
+		color: @base-color;
+	}
 }
-.SobiPro .rating-criteria,
-.SobiPro .rating-summary {
-	line-height: 1.428571429;
+.SobiPro .review-container {
+	.rating-criteria,
+	.rating-summary {
+		line-height: 1.428571429;
+	}
+	.rating-criteria {
+		font-size: calc(@fontsize + 1px);
+	}
+	.review-author {
+		font-size: calc(@fontsize - 1px);
+	}
+	.iv.rating-cancel i,
+	.review-title {
+		font-size: calc(@fontsize + 2px);
+	}
+	.summary-header {
+		font-size: calc(@fontsize + 4px);
+	}
+	.tags_desc,
+	.criteria-value {
+		font-size: calc(@fontsize - 3px);;
+	}
+	.summary-criteria-value {
+		font-size: @fontsize;
+	}
 }
-
 
 // Calendar Field
 // -----------------------------------------------
@@ -1876,6 +1906,11 @@
 .SobiPro .spCalDayHead .navbar-inner {
 	background-color: @alert-color;
 	color: @text-color;
+	font-size: calc(@fontsize + 1px);;
+}
+.SobiPro .spCalendarDayHead .navbar-text,
+.SobiPro .spcalNav a {
+	font-size: calc(@fontsize + 1px);;
 }
 .SobiPro .SpCalDay.badge {
 	background-color: @alert-color;
@@ -1895,6 +1930,13 @@
 .SobiPro .spClassCalendarRepeat {
 	margin-top: 5px;
 }
+
+// Download Field
+// -----------------------------------------------
+.SobiPro .spEditDownloadPreview p {
+	font-size: @fontsize;
+}
+
 
 // Collection App
 // -----------------------------------------------
@@ -1920,6 +1962,17 @@
 	background-color: @hover-color;
 	color: @active-color;
 }
+.SobiPro .ctrl-collection-remove-item {
+	margin-top: 5px;
+	i {
+		font-size: @fontsize;
+	}
+}
+.SobiPro .collection-entry-container .page-header,
+.SobiPro .btnCollection i {
+	font-size: calc(@fontsize + 3px);
+}
+
 
 // Profile Field
 // -----------------------------------------------
@@ -1935,6 +1988,42 @@
 	color: @base-color;
 }
 
+
+//restore font size in modal
+.SobiPro .modal-body {
+	font-size: 14px;
+
+	label,
+	textarea,
+	select,
+	input[type="text"],
+	input[type="password"],
+	input[type="datetime"],
+	input[type="datetime-local"],
+	input[type="date"],
+	input[type="month"],
+	input[type="time"],
+	input[type="week"],
+	input[type="number"],
+	input[type="email"],
+	input[type="url"],
+	input[type="search"],
+	input[type="tel"],
+	input[type="color"],
+	.uneditable-input {
+		font-size: 14px;
+	}
+}
+.SobiPro .modal-footer {
+	.btn {
+		font-size: 14px;
+	}
+}
+.SobiPro .modal-header {
+	.spMessage {
+		font-size: 14px;
+	}
+}
 
 // Custom Media Queries
 // ==============================================
