(#) Autosuggest does not work with B3-default3 template (Issue #1577)

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -265,8 +265,8 @@
 		color: @font-color;
 	}
 	//without that the topmenu items are not selectable
-	.navbar-collapse.collapse {
-		overflow: hidden!important;
+	.collapse {
+		position: inherit;
 	}
 	.btn {
 		font-weight: 500;
