--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -1492,7 +1492,7 @@
 		border-radius: 4px 0 0 4px;
 	}
 }
-.SobiPro .spFieldUrl .input-group .form-control,
+//.SobiPro .spFieldUrl .input-group .form-control,
 .SobiPro .spFieldUrl select {
 	width: 100px;
 }
