--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -1095,9 +1095,12 @@
 	min-width: 27px;
 	text-align: center;
 	letter-spacing: -1.3px;
+	-webkit-box-sizing: unset;
+	-moz-box-sizing: unset;
+	box-sizing: unset;
 	& when (@corners = rounded) {
 		border-radius: 4px;
-}
+	}
 }
 .SobiPro .alpha .pagination > li:first-child > a,
 .SobiPro .alpha .pagination > li:first-child > span {
