(#) Warnings/notices in SobiPro panel, if no news available from our server

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -295,6 +295,9 @@
 		font-size: calc(@fontsize - 2px);
 		line-height: 1.5;
 	}
+	.noblock {
+		display: inline;
+	}
 }
 /* form-inline mode needs to be checked
 .SobiPro .form-inline [class*="col-sm-"] {
