--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -248,6 +248,11 @@
 
 // Overwrite some bootstrap styles resp. template changes
 // ----------------------------------------
+
+// special styles for component only (not modules)
+#SobiPro {
+	background-color: @back-color;
+}
 .SobiPro {
 	padding: 4px;
 	font-size: @fontsize;
@@ -256,7 +261,6 @@
 		font-size: 110%;
 		border-color: darken(@active-color, 30%);
 	}
-	background-color: @back-color;
 
 	a {
 		color: @active-color;
