--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -1257,6 +1257,9 @@
 .SobiPro .spEntryEdit .message-lightbulb .popover.bottom {
 	margin-top: 0;
 }
+.SobiPro .spEntryEdit select.spClassCategory {
+	margin-bottom: 3px;
+}
 .SobiPro .editor {
 	overflow: visible;
 }
@@ -1272,6 +1275,9 @@
 	font-family: FontAwesome;
 	content: "";
 	padding-right: 5px;
+}
+.SobiPro .spEntryEdit select.spClassCategory {
+	margin-bottom: 3px;
 }
 
 // URL and Email Fields
