--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -233,6 +233,11 @@
 
 // Overwrite some bootstrap styles
 // ----------------------------------------
+
+// special styles for component only (not modules)
+#SobiPro {
+	background-color: @back-color;
+}
 .SobiPro {
 	padding: 4px;
 	font-size: @fontsize;
@@ -241,7 +246,6 @@
 		font-size: 110%;
 		border-color: darken(@active-color, 30%);
 	}
-	background-color: @back-color;
 
 	a {
 		color: @active-color;
@@ -1034,7 +1038,7 @@
 // ----------------------------------------
 .SobiPro .alphalist {
 	float: left;
-	margin: 5px 10px 2px 1px;
+	margin: 1px 10px 2px 1px;
 }
 
 .SobiPro .alpha .pagination {
