(#) Version of information field in fields manager missing

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -1681,6 +1681,7 @@ body.modal-open {
 	padding-right: 5px;
 }
 
+.SobiPro .spSearch select.spClassCategory,
 .SobiPro .spEntryEdit select.spClassCategory {
 	margin-bottom: 3px;
 }
