--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -1375,6 +1375,7 @@
 	margin-top: 0;
 }
 
+.SobiPro .spSearch select.spClassCategory,
 .SobiPro .spEntryEdit select.spClassCategory {
 	margin-bottom: 3px;
 }
