(#) Height of the SigsiuTree container for menu items corrected (Issue #1640)

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -997,7 +997,18 @@ input[type='radio'] {
 		margin-top: 10px;
 	}
 }
-
+.SobiPro .menuItemSigsiuTree {
+	margin-left: 0;
+	margin-right: 0;
+	overflow: auto;
+	max-height: 206px;
+}
+.SobiPro .menuItemEntrySigsiuTree {
+	margin-left: 0;
+	margin-right: 0;
+	overflow: auto;
+	max-height: 160px;
+}
 .SobiPro .sobiCatsSigsiuTree {
 	margin-left: 0;
 	margin-right: 0;
