(!) HTML tags now possible in helptext (field description)

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -504,6 +504,7 @@
 
 .SobiPro .modal-header .close {
 	margin-top: 3px;
+	margin-right: 5px;
 }
 
 .SobiPro .modal-header .close {
@@ -2255,6 +2256,12 @@ body.modal-open {
 // -----------------------------------------------
 .SobiPro .spEditDownloadPreview p {
 	font-size: @fontsize;
+}
+
+// QR-Code Field
+// -----------------------------------------------
+.SobiPro .spClassViewQRCode {
+	text-align: center;
 }
 
 // Collection App
