--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -1950,6 +1950,12 @@
 	font-size: @fontsize;
 }
 
+// QR-Code Field
+// -----------------------------------------------
+.SobiPro .spClassViewQRCode {
+	text-align: center;
+}
+
 // Collection App
 // -----------------------------------------------
 & when (@inverse = inverse) {
