(!) publishing_format set to a more readable format by default

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -968,6 +968,10 @@ body.modal-open {
 	padding: 8px 15px 8px 14px;
 	margin-bottom: 20px;
 	text-shadow: none;
+
+	.close {
+		right: 0;
+	}
 }
 
 .SobiPro .spAlert {
